# AlgoTrader

./: .coverage  .gitignore  ALGOTRADER_GLOBAL_BRIEF.md  CLAUDE.md  MIGRATION.md  MODULE_PROMPTS.md  Makefile  PI.md  USER_GUIDE.md  alembic.ini  go.mod  pyproject.toml  requirements-dev.txt  requirements.txt
.beads/: issues.jsonl  metadata.json
.claude/: settings.local.json
.devcontainer/: devcontainer.json
.docs/: Frozen Project Specification v1.0.md  implementation-log.md  old_prompts.md
.github/workflows/: ci.yml
algotrader/: __init__.py  cli.py
algotrader/backtest/: __init__.py  bootstrap.py  config_schema.py  costs.py  cscv.py  loader.py  main.py  metrics.py  monte_carlo.py  permutation.py  strategy_sim.py  walk_forward.py  writer.py
algotrader/dashboard/: __init__.py  app.py  config_editor.py  layout.py  main.py  writer.py
algotrader/execution/: __init__.py  fill_tracker.py  ibkr_client.py  main.py  order_builder.py  reconcile.py  risk_guards.py  sizer.py  writer.py
algotrader/ingestion/: __init__.py  downloader.py  main.py  returns.py  scraper.py  (+2 more)
config/: risk.yaml  sentiment_params.yaml  strategy_params.yaml  system.yaml  universe.yaml
contracts/: job_token.schema.json  system_event.schema.json
logs/: algotrader.log.2026-03-24
migrations/: env.py
s1_orchestrator/: __init__.py  approval_manager.py  event_handler.py  job_manager.py  main.py  process_manager.py  scheduler.py  state_machine.py  watchdog.py
s2_data_ingestion/: downloader.py  main.py  returns.py  scraper.py  utils.py  validator.py
s3_signal_engine/: competition.py  config_schema.py  loaders.py  main.py  ou_model.py  regime.py  reversal.py  sentiment_adj.py  stat_arb.py  writer.py
s4_backtest_validator/: __init__.py  bootstrap.py  config_schema.py  costs.py  cscv.py  loader.py  main.py  metrics.py  monte_carlo.py  permutation.py  strategy_sim.py  walk_forward.py  writer.py
s5_sentiment/: README.md  __init__.py  aggregator.py  main.py  requirements.txt  residualizer.py
s6_execution/: __init__.py  fill_tracker.py  ibkr_client.py  main.py  order_builder.py  reconcile.py  risk_guards.py  sizer.py  writer.py
s7_dashboard/: __init__.py  app.py  config_editor.py  layout.py  main.py  writer.py
scripts/: RUNBOOK.md  bootstrap.py
shared/: __init__.py  config_loader.py  constants.py  db.py  logger.py
tests/: conftest.py
(+170 files in other folders)
