[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "algotrader"
version = "1.0.0"
description = "Modular, multi-process algorithmic trading platform for US equities"
requires-python = ">=3.11"

[project.scripts]
algotrader = "algotrader.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["algotrader*"]
exclude = ["tests*", "migrations*", ".venv*", "cmd*", "internal*", "pkg*"]

[tool.pytest.ini_options]
testpaths = ["tests/unit"]
pythonpath = ["."]
addopts = "-q --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 120
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["algotrader"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
plugins = ["sqlalchemy.ext.mypy.plugin"]

[[tool.mypy.overrides]]
module = ["arch.*", "ib_insync.*", "yfinance.*", "praw.*"]
ignore_missing_imports = true
